--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ a{cursor: pointer;}
   top: 0;
   bottom: 0;
   left: 0;
-  padding: 15px;
+  padding: 15px 20px;
   right: -19px;
   overflow-y: scroll;
 }
@@ -99,7 +99,7 @@ a{cursor: pointer;}
   width: 135px;
   border-radius: 50%;
   border: 2px solid #ccc; 
-  margin: 0 40px;
+  margin: 0 36px;
 }
 
 .foot{
